test/cli/test-validating-policy/envoy-allow/request.json
{
    "attributes": {
      "request": {
        "http": {
          "method": "GET",
          "path": "/api/v1/pods",
          "headers": {}
        }
      }
    }
  }
