test/cli/test-validating-policy/envoy-allow/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
envoyPayloads:
- ./request.json
kind: Test
metadata:
  name: vpol-envoy-allow
policies:
- ./policy.yaml
results:
- kind: ""
  policy: envoy-allow
  result: pass
